# proxpde

./: .gitignore  .travis.yml  CMakeLists.txt  Contrib.cmake  FindEigen.cmake  FindUMFPack.cmake  README.md  assembly.hpp  bc.hpp  blockmatrix.hpp  builder.hpp  curfe.hpp  def.hpp  dof.hpp  dof_object.hpp  fe.hpp  fespace.hpp  geo.cpp  geo.hpp  iomanager.hpp  main.cpp  mesh.cpp  mesh.hpp  minifem.h.in  proxpde.h.in  qr.hpp  reffe.cpp  reffe.hpp  test_eigen.cpp  test_trap.cpp  timer.hpp  var.hpp  xdmf_traits.hpp
cmake/: Contrib.cmake  FindEigen.cmake  FindTinyXML2.cmake  FindUMFPack.cmake  FindYamlCpp.cmake  MiniFEMAddTest.cmake  MiniFEMConfig.cmake.in  ProXPDEAddTest.cmake  ProXPDEConfig.cmake.in
data/: advection1d.yaml  cavitytime.yaml  config.yaml  cube_skew.msh  cube_uns.msh  elbow.msh  elbow_q.msh  elbow_qq.msh  poisson3dtet.yaml  square_q.msh  square_skew.msh  square_uns.msh  steptime.yaml
include/: CMakeLists.txt  array.hpp  assembler.hpp  assembly.hpp  assembly_base.hpp  assembly_bc.hpp  assembly_coupling.hpp  assembly_lhs.hpp  assembly_rhs.hpp  bc.hpp  blockmatrix.hpp  builder.hpp  curfe.hpp  def.hpp  dof.hpp  eqn.hpp  fe.hpp  fespace.hpp  feutils.hpp  fv.hpp  geo.hpp  gradient.hpp  hdf5.hpp  iomanager.hpp  l2projection.hpp  mesh.hpp  mesh_refine.hpp  multigrid.hpp  ns.hpp  qr.hpp  reffe.hpp  solver.hpp  sparse_matrix.hpp  timer.hpp  var.hpp  xdmf_doc.hpp  xdmf_traits.hpp
spack_env/: spack.yaml
src/: CMakeLists.txt  bc.cpp  def.cpp  fespace.cpp  geo.cpp  iomanager.cpp  mesh.cpp  ns.cpp  qr.cpp  reffe.cpp  var.cpp  xdmf_doc.cpp
test/: CMakeLists.txt  advection1d.cpp  advection2dquad.cpp  advection2dtri.cpp  assemblyvector.cpp  blockmatrix.cpp  cavity.cpp  cavitytime.cpp  cavitytime_inc.cpp  config.cpp  da2d.cpp  divfree.cpp  dr2dquad.cpp  dual.cpp  fevar.cpp  fourier_nb.cpp  gmres.cpp  hdf5write.cpp  heat1d.cpp  heat2d.cpp  heat_wedge.cpp  inside_test.cpp  inverse_mapping.cpp  io.cpp  iodisc.cpp  iotime.cpp  ipcs.cpp  ipcs_rt.cpp  mesh_adaptive.cpp  mesh_block.cpp  mesh_extrude.cpp  mesh_facets.cpp  mesh_planar.cpp  mesh_refine.cpp  mesh_yaml.cpp  multigrid.cpp  neumann.cpp  neumann_fe.cpp  nipcs.cpp  normal.cpp  (+42 more)
tools/: .gitignore  ci.bash  ci.bash.template  ci.env.template  minifem.xml  spack.yaml
